[package]
name = "jito-backrun-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11.7"
futures-util = "0.3.28"
histogram = "0.11.3"
jito-protos = { path = "../jito_protos" }
log = "0.4.17"
rand = "0.9.0"
jito-searcher-client = { path = "../searcher_client" }
solana-client = "2.2.1"
solana-metrics = "2.2.1"
solana-sdk = "2.2.1"
solana-transaction-status = "2.2.1"
spl-memo = "6.0.0"
thiserror = "2.0.12"
tokio = "1"
tonic = { version = "0.12.3", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
uuid = { version = "1.8.0", features = ["v4"] }
