[package]
name = "jito-searcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.1"
chrono = "0.4.24"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.7"
env_logger = "0.11.7"
futures-util = "0.3.28"
histogram = "0.11.3"
jito-protos = { path = "../jito_protos" }
log = "0.4.17"
prost-types = "0.13.5"
rand = "0.9.0"
jito-searcher-client = { path = "../searcher_client" }
solana-client = "2.1.16"
solana-metrics = "2.1.16"
solana-sdk = "2.1.16"
solana-transaction-status = "2.1.16"
spl-memo = "6.0.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
